[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.isort]
line_length = 127
profile = "black"

[tool.black]
line-length = 127

[tool.pylint]
c-extension-no-member = "false"

[tool.pytest.ini_options]
markers = [
    "vmware: marks tests as require VMWare (deselect with '-m \"not vmware\"')"
]