[metadata]
name = pytrafficgen
description = Base Python OO API package to automate traffic generators (Ixia, Spirent, TRex, Xena etc.)
url = https://github.com/shmir/PyIxNetwork
author = Yoram Shamir
author_email = yoram@ignissoft.com
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache Software License
keywords = keysight, ixia, ixnetwork, ixload, spirent, stc, avalanche, trex, xena, l2l3, l4l7, tg, traffic generator, test automation, automation api
classifiers =
    Development Status :: 5 - Production/Stable
    Natural Language :: English
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Topic :: Software Development :: Testing
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    fabric
    paramiko
    vmwc
    PyYAML
    pyVmomi
    git+https://github.com/vmware/vsphere-automation-sdk-python.git

[options.packages.find]
exclude =
    docs*
    tests*

[mypy]
ignore_missing_imports = True
allow_untyped_calls = True
allow_untyped_defs = False
allow_incomplete_defs = False
follow_imports = skip
no_strict_optional = True
show_error_codes = True
